--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <p>
           You're successfully running JSON Server
           <br />
-          ✧*｡٩(ˊᗜˋ*)و✧*｡
+          ✧*｡٩(ˊᗜˋ*)و✧*｡ And I am lucky
         </p>
 
         <div id="resources"></div>
